--- a/lib/cart_wishlist_module/presentation/core/assets/lang/ar.json
+++ b/lib/cart_wishlist_module/presentation/core/assets/lang/ar.json
@@ -1,31 +1,31 @@
 {
     "cart": {
-      "updating_cart_failed": "Updating cart failed",
-      "removed_from_cart": "Item removed from cart",
-      "added_to_cart": "Item added to cart",
-      "quantity_updated": "Quantity updated",
-      "add_to_cart": "Add to cart",
-      "cart": "Cart",
-      "total": "Total",
-      "checkout": "Checkout",
-      "cart_is_empty": "Cart is empty",
-      "shipping_details": "Shipping details",
-      "enter_valid_promocode": "Enter a valid promocode",
-      "price": "Price",
+      "updating_cart_failed": "فشل تحديث سلة التسوق",
+      "removed_from_cart": "تمت إزالة العنصر من سلة التسوق",
+      "added_to_cart": "تمت إضافة العنصر إلى سلة التسوق",
+      "quantity_updated": "تم تحديث الكمية",
+      "add_to_cart": "أضف إلى السلة",
+      "cart": "عربة التسوق",
+      "total": "المجموع",
+      "checkout": "الدفع",
+      "cart_is_empty": "البطاقه خاليه",
+      "shipping_details": "تفاصيل الشحن",
+      "enter_valid_promocode": "أدخل رمزًا ترويجيًا صالحًا",
+      "price": "سعر",
       "gst": "GST",
-      "delivery_charge": "Delivery charge",
-      "promo_applied": "Promo applied",
-      "wallet": "Wallet",
-      "use_wallet_balance": "Use wallet balance",
-      "pay_now": "Pay now",
-      "payment_type": "Payment type",
-      "select_address": "Select Address",
-      "address_change_success": "Address changed successfully",
-      "wishlist": "Wishlist",
-      "wishlist_empty": "Wishlist is empty",
+      "delivery_charge": "رسوم التوصيل",
+      "promo_applied": "تم تطبيق العرض الترويجي",
+      "wallet": "محفظة",
+      "use_wallet_balance": "استخدام رصيد المحفظة",
+      "pay_now": "ادفع الآن",
+      "payment_type": "نوع الدفع",
+      "select_address": "حدد العنوان",
+      "address_change_success": "تم تغيير العنوان بنجاح",
+      "wishlist": "قائمة الرغبات",
+      "wishlist_empty": "قائمة الرغبات فارغة",
   
   
-      "shopping_cart":"Shopping cart",
-      "total_price":"Total price"
+      "shopping_cart":"عربة التسوق",
+      "total_price":"السعر الكلي"
     }
   }
