--- a/lib/user_module/presentation/core/assets/lang/ar.json
+++ b/lib/user_module/presentation/core/assets/lang/ar.json
@@ -62,7 +62,12 @@
     "address": "Address",
     "pending": "المعلقه",
     "delivered": "تسليم",
-    "not_delivered": "لم يتم تسليمها"
+    "not_delivered": "لم يتم تسليمها",
+
+    "my_account":"حسابي",
+    "personal_details":"تفاصيل شخصية",
+    "addresses":"عناوين"
+
   },
   "footer": {
     "contactUs": "اتصل بنا",
