--- a/lib/user_module/presentation/core/assets/lang/fr.json
+++ b/lib/user_module/presentation/core/assets/lang/fr.json
@@ -6,90 +6,132 @@
       "sign_out": "Se déconnecternOut",
       "reset": "Reset",
       "mobile": "Réinitialiser",
-      "phone": "Phone",
-      "phone_or_email":"Phone or Email",
-      "house_or_flat": "House/Flat name",
+      "phone": "Téléphone",
+      "phone_or_email":"Téléphone ou email",
+      "house_or_flat": "Nom de la maison/appartement",
       "district": "District",
-      "state": "State",
-      "pincode": "Pincode",
-      "street_name": "Street name",
-      "landmark": "Landmark",
-      "address_type": "Address type",
-      "post_office": "Post office",
-      "set_this_address": "Set this address as default address",
-      "shipping_address": "Shipping address",
-      "reset_password": "Reset Password",
-      "sign_in_google": "Sign In With Google",
-      "signing_in": "Signing In...",
-      "invalid_credentials": "Invalid credentials",
-      "sign_in_success": "Successfully signed in",
-      "name": "Name",
-      "first_name": "First Name",
-      "last_name": "Last Name",
-      "signing_up": "Signing up...",
-      "user_exist_already": "User exist already",
-      "invalid_password": "Invalid password",
-      "confirm_password": "Confirm Password",
-      "edit_profile": "Edit Profile",
-      "profile": "My Profile",
-      "confirm_sign_out": "Are you sure to sign out?",
-      "updateProfile": "Update profile",
-      "profile_updating": "Updating profile...",
-      "profile_updated": "Profile updated successfully",
-      "email": "Email",
-      "sign_in": "Sign in",
-      "sign_up": "Create new account",
-      "not_found": "Not Found",
+      "state": "État",
+      "pincode": "Code PIN",
+      "street_name": "nom de rue",
+      "landmark": "Point de repère",
+      "address_type": "Type d'adresse",
+      "post_office": "Bureau de poste",
+      "set_this_address": "Définir cette adresse comme adresse par défaut",
+      "shipping_address": "Adresse de livraison",
+      "reset_password": "réinitialiser le mot de passe",
+      "sign_in_google": "Connectez-vous avec Google",
+      "signing_in": "Connectez-vous...",
+      "invalid_credentials": "les informations d'identification invalides",
+      "sign_in_success": "Connexion réussie",
+      "name": "Nom",
+      "first_name": "Prénom",
+      "last_name": "Nom de famille",
+      "signing_up": "S'enregistrer...",
+      "user_exist_already": "L'utilisateur existe déjà",
+      "invalid_password": "Mot de passe incorrect",
+      "confirm_password": "Confirmez le mot de passe",
+      "edit_profile": "Editer le profil",
+      "profile": "Mon profil",
+      "confirm_sign_out": "Êtes-vous sûr de vous déconnecter ?",
+      "updateProfile": "Mettre à jour le profil",
+      "profile_updating": "Mise à jour du profil...",
+      "profile_updated": "Mise à jour du profil réussie",
+      "email": "E-mail",
+      "sign_in": "Se connecter",
+      "sign_up": "Créer un compte",
+      "not_found": "Pas trouvé",
       "switchLanguage":"Change to عربى",
       "language":"Langue",
-      "switch_to": "Switch to",
-      "not_signed_in": "You are not signed in",
-      "password_changed": "Your password has been changed successfully",
-      "change_password": "Update Password",
-      "forgot_password": "Forgot password?",
-      "current_password": "Current password",
-      "new_password": "New password",
-      "otp_has_sent": "One Time Password(OTP) has been sent to your registered email, please enter OTP above to reset your password.",
-      "send_otp": "Send OTP",
-      "user_not_found": "User does not exist!",
+      "switch_to": "Basculer vers",
+      "not_signed_in": "Vous n'êtes pas connecté",
+      "password_changed": "Votre mot de passe a été changé avec succès",
+      "change_password": "Mettre à jour le mot de passe",
+      "forgot_password": "Mot de passe oublié?",
+      "current_password": "Mot de passe actuel",
+      "new_password": "Nouveau mot de passe",
+      "otp_has_sent": "Un mot de passe à usage unique (OTP) a été envoyé à votre adresse e-mail enregistrée, veuillez saisir OTP ci-dessus pour réinitialiser votre mot de passe.",
+      "send_otp": "Envoyer OTP",
+      "user_not_found": "L'utilisateur n'existe pas!",
       "otp": "OTP",
-      "otp_expired": "OTP expired",
-      "send_otp_failed": "OTP not sent",
-      "pick_store": "Pick a store",
-      "dob": "Date of birth",
-      "male": "Male",
-      "female": "Female",
-      "wrong_password": "Your password doest not match with our database",
-      "your": "Your",
-      "city": "City",
-      "country": "Country",
-      "please_enter_otp": "Please enter the OTP received in your email",
-      "otp_verification": "OTP Verification",
-      "verify": "Verify",
-      "resend_in": "Resend in",
-      "resend": "Resend",
+      "otp_expired": "OTP expiré",
+      "send_otp_failed": "OTP non envoyé",
+      "pick_store": "Choisissez un magasin",
+      "dob": "Date de naissance",
+      "male": "Mâle",
+      "female": "Femelle",
+      "wrong_password": "Votre mot de passe ne correspond pas à notre base de données",
+      "your": "Ton",
+      "city": "Ville",
+      "country": "Pays",
+      "please_enter_otp": "Veuillez saisir l'OTP reçu dans votre email",
+      "otp_verification": "Vérification OTP",
+      "verify": "Vérifier",
+      "resend_in": "Renvoyer dans",
+      "resend": "Renvoyer",
       "notifications": "Notifications",
-      "register": "Register",
-      "address": "Address",
-      "saved_address": "Saved address",
-      "add_new_address": "Add new address",
-      "add_address": "Add address",
-      "submit_address": "Submit address",
-      "empty_notifications": "Notification list is empty",
-      "delete_address_failed": "Failed to delete address",
-      "delete_address_success": "Deleted address successfully",
-      "edit_address_success": "Address Edit success",
-      "edit_address_failed": "Failed to edit address",
-      "pending": "Pending",
-      "delivered": "Delivered",
-      "not_delivered": "Not Delivered",
+      "register": "Registre",
+      "address": "Adresse",
+      "saved_address": "Adresse enregistrée",
+      "add_new_address": "Ajouter une nouvelle adresse",
+      "add_address": "Ajoutez l'adresse",
+      "submit_address": "Envoyer l'adresse",
+      "empty_notifications": "La liste de notifications est vide",
+      "delete_address_failed": "Échec de la suppression de l'adresse",
+      "delete_address_success": "Adresse supprimée avec succès",
+      "edit_address_success": "Réussite de la modification de l'adresse",
+      "edit_address_failed": "Échec de la modification de l'adresse",
+      "pending": "En attente",
+      "delivered": "Livré",
+      "not_delivered": "Non livrés",
       "my_account":"Mon compte",
     "personal_details":"Détails personnels",
-    "addresses":"Adresses"
+    "addresses":"Adresses",
+
+    "letsfindthe":"Trouvons le",
+    "best":"Meilleure",
+    "healthy":"En bonne santé",
+    "grocery":" Épicerie",
+    "LetsExplore":"Explorons",
+    "signup":"S'inscrire",
+    "lorem_ipsum":"La porte Lorem ipsum est importante, la porte Lorem ipsum est importante, la porte Lorem ipsum est importante, la porte Lorem ipsum est importante.",
+    "start_exploring":"Connectez-vous à votre compte et commencez à explorer !",
+    "required":"*Requis",
+    "10_digit_mobile_number_required":"*Numéro de mobile à 10 chiffres requis",
+    "mobile_number":"Numéro de portable",
+    "enter_password":"Entrer le mot de passe",
+    "login_using_mobile_OTP":"Connectez-vous à l'aide d'OTP mobile",
+    "an_OTP_will_be_sent_to_your_mobile_number":"Un OTP sera envoyé à votre numéro de mobile",
+    "continue":"Continuer",
+    "already_a_user":"Déjà utilisateur ?",
+    "enter_otp":"Entrez OTP",
+    "enter_otp_sent":"Entrez l'OTP envoyé à votre numéro de mobile",
+    "enter_strong_password":"Entrez un mot de passe fort",
+    "password_must_be_least_8_characters_long":"Le mot de passe doit comporter au moins 8 caractères.",
+    "passwords_do_not_match":"Les mots de passe ne correspondent pas",
+    "enter_e-mail_address":"Entrer l'adresse e-mail",
+    "skip":"sauter",
+    "enter_the_billing_address":"Entrez l'adresse de facturation",
+    "building_no":"Bâtiment n°",
+    "select_address_type":"Sélectionnez le type d'adresse",
+    "select_area":"Sélectionnez une zone",
+    "logout":"Se déconnecter",
+    "failed_to_update_address":"Échec de la mise à jour de l'adresse",
+    "no_addresses_added":"Aucune adresse ajoutée",
+    "confirm_password_is_required":"Confirmer que le mot de passe est requis"
+
+
+
+
+
+
+
+
+
+
     },
     "footer": {
-      "contactUs": "Contact Us",
-      "about": "About"
+      "contactUs": "Contactez-nous",
+      "about": "À propos"
     },
     "language":{
         "my_account":"Mon compte"
