--- a/lib/user_module/presentation/core/assets/lang/en.json
+++ b/lib/user_module/presentation/core/assets/lang/en.json
@@ -7,7 +7,7 @@
     "reset": "Reset",
     "mobile": "Mobile",
     "phone": "Phone",
-    "phone_or_email":"Phone or Email",
+    "phone_or_email": "Phone or Email",
     "house_or_flat": "House/Flat name",
     "district": "District",
     "state": "State",
@@ -40,7 +40,7 @@
     "sign_in": "Sign in",
     "sign_up": "Create account",
     "not_found": "Not Found",
-    "switchLanguage":"Change to عربى",
+    "switchLanguage": "Change to عربى",
     "language": "Language",
     "switch_to": "Switch to",
     "not_signed_in": "You are not signed in",
@@ -83,55 +83,49 @@
     "pending": "Pending",
     "delivered": "Delivered",
     "not_delivered": "Not Delivered",
-    "my_account":"My Account",
-    "personal_details":"Personal details",
-    "addresses":"Addresses",
-    "letsfindthe":"Let’s find the",
-    "best":"Best",
-    "healthy":"Healthy",
-    "grocery":" Grocery",
-    "LetsExplore":"Let’s Explore",
-    "signup":"Sign Up",
-    "lorem_ipsum":"Lorem ipsum door sit amet, lorem ipsum door sit amet, Lorem ipsum door sit amet, lorem ipsum door sit amet.",
-    "start_exploring":"Sign in to your account and start exploring!",
-    "required":"*Required",
-    "10_digit_mobile_number_required":"*10 digit mobile number required",
-    "mobile_number":"Mobile number",
-    "enter_password":"Enter password",
-    "login_using_mobile_OTP":"Login using mobile OTP",
-    "an_OTP_will_be_sent_to_your_mobile_number":"An OTP will be sent to your mobile number",
-    "continue":"Continue",
-    "already_a_user":"Already a user ?",
-    "enter_otp":"Enter OTP",
-    "enter_otp_sent":"Enter the OTP sent to your mobile number",
-    "enter_strong_password":"Enter a strong password",
-    "password_must_be_least_8_characters_long":"Password must be at least 8 characters long.",
-    "passwords_do_not_match":"Passwords do not match",
-    "enter_e-mail_address":"Enter e-mail address",
-    "skip":"Skip",
-    "enter_the_billing_address":"Enter the billing address",
-    "building_no":"Building no.",
-    "select_address_type":"Select address type",
-    "select_area":"Select area",
-    "logout":"Logout",
-    "failed_to_update_address":"Failed to update address",
-    "no_addresses_added":"No addresses added",
-    "confirm_password_is_required":"Confirm Password is required"
-
-
-
-
-
+    "my_account": "My Account",
+    "personal_details": "Personal details",
+    "addresses": "Addresses",
+    "letsfindthe": "Let’s find the",
+    "best": "Best",
+    "healthy": "Healthy",
+    "grocery": " Grocery",
+    "LetsExplore": "Let’s Explore",
+    "signup": "Sign Up",
+    "lorem_ipsum": "Lorem ipsum door sit amet, lorem ipsum door sit amet, Lorem ipsum door sit amet, lorem ipsum door sit amet.",
+    "start_exploring": "Sign in to your account and start exploring!",
+    "required": "*Required",
+    "10_digit_mobile_number_required": "*10 digit mobile number required",
+    "mobile_number": "Mobile number",
+    "enter_password": "Enter password",
+    "login_using_mobile_OTP": "Login using mobile OTP",
+    "an_OTP_will_be_sent_to_your_mobile_number": "An OTP will be sent to your mobile number",
+    "continue": "Continue",
+    "already_a_user": "Already a user ?",
+    "enter_otp": "Enter OTP",
+    "enter_otp_sent": "Enter the OTP sent to your mobile number",
+    "enter_strong_password": "Enter a strong password",
+    "password_must_be_least_8_characters_long": "Password must be at least 8 characters long.",
+    "passwords_do_not_match": "Passwords do not match",
+    "enter_e-mail_address": "Enter e-mail address",
+    "skip": "Skip",
+    "enter_the_billing_address": "Enter the billing address",
+    "building_no": "Building no.",
+    "select_address_type": "Select address type",
+    "select_area": "Select area",
+    "logout": "Logout",
+    "failed_to_update_address": "Failed to update address",
+    "no_addresses_added": "No addresses added",
+    "confirm_password_is_required": "Confirm Password is required",
+    "sign_up_failed": "Sign up failed",
+    "let_introduce_yourself": "Let’s introduce yourself",
+    "enter_your_personal_details": "Enter your personal details"
   },
   "footer": {
     "contactUs": "Contact Us",
     "about": "About"
   },
-  "language":{
-    "my_account":"My Account"
-
+  "language": {
+    "my_account": "My Account"
   }
-
-
-
 }
